Finally fix this weird alignment and underline

--- a/src/components/status.css
+++ b/src/components/status.css
@@ -783,6 +783,9 @@ a.card:is(:hover, :focus) {
 .status .extra-meta a {
   color: inherit;
   text-decoration: none;
+  vertical-align: baseline;
+  text-decoration-thickness: 1px;
+  text-underline-offset: 3px;
 }
 .status .extra-meta a:is(:hover, :focus) {
   text-decoration: underline;
